# athena-federation-client-rust

./: Cargo.toml  README.md
src/: api.rs  lib.rs  main.rs  models.rs  requests.rs
tests/: metadata_tests.rs
