[package]
name = "rust_lambda_fed"
version = "0.1.0"
authors = ["Martin Grund <magrund@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
rusoto_core = "0.41.0"
rusoto_lambda = "0.41.0"
rusoto_s3 = "0.41.0"
rusoto_sts = "0.41.0"
pretty_env_logger = "0.3.1"
env_logger="*"
log = "0.4"
serde = { version="1.0.102", features = ["derive"] }
arrow = { path="/Users/magrund/Development/arrow/rust/arrow" }
bytes = "0.4.12"
base64 = "0.11.0"