# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "rust_lambda_fed"
version = "0.1.0"
authors = ["Martin Grund <magrund@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
rusoto_core = "0.41.0"
rusoto_lambda = "0.41.0"
rusoto_s3 = "0.41.0"
rusoto_sts = "0.41.0"
pretty_env_logger = "0.3.1"
env_logger="*"
log = "0.4"
serde = { version="1.0.102", features = ["derive"] }
arrow = { path="/Users/magrund/Development/arrow/rust/arrow" }
bytes = "0.4.12"
base64 = "0.11.0"